--- a/src/app/dosing-list-item/dosing-list-item.component.html
+++ b/src/app/dosing-list-item/dosing-list-item.component.html
@@ -1,7 +1,7 @@
 <span style="font-weight: bold;">Chlorung</span>
 
 <mdb-form-control>
-    <input mdbInput class="form-control" id="form1" [ngxTimepicker]="startTime" [format]="24" readonly>
+    <input mdbInput class="form-control" id="form1" [ngxTimepicker]="startTime" [format]="24">
     <label mdbLabel class="form-label" for="form1">Start Zeit</label>
     <ngx-material-timepicker #startTime [minutesGap]="5"></ngx-material-timepicker>
 </mdb-form-control>
