--- a/src/app/timing-list-item/timing-list-item.component.html
+++ b/src/app/timing-list-item/timing-list-item.component.html
@@ -1,13 +1,13 @@
 <span style="font-weight: bold">Filtern</span>
 
 <mdb-form-control>
-    <input mdbInput class="form-control" id="form1" [ngxTimepicker]="startTime" [format]="24" readonly>
+    <input mdbInput class="form-control" id="form1" [ngxTimepicker]="startTime" [format]="24">
     <label mdbLabel class="form-label" for="form1">Start Zeit</label>
     <ngx-material-timepicker #startTime [minutesGap]="5"></ngx-material-timepicker>
 </mdb-form-control>
 
 <mdb-form-control>
-    <input mdbInput class="form-control" id="form1" [ngxTimepicker]="stopTime" [format]="24" readonly>
+    <input mdbInput class="form-control" id="form1" [ngxTimepicker]="stopTime" [format]="24" >
     <label mdbLabel class="form-label" for="form1">Stop Zeit</label>
     <ngx-material-timepicker #stopTime [minutesGap]="5"></ngx-material-timepicker>
 </mdb-form-control>
