Committing fixes in the dark, seriously, who killed my power!?

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,15 +52,15 @@
                 <div class="row flex-grow-0 my-3" style="width: 100%; height: auto;">
                     <div
                         class="col d-flex d-xxl-flex flex-column justify-content-md-center align-items-md-center justify-content-xxl-center align-items-xxl-center px-3">
-                        <app-quick-dose-button></app-quick-dose-button>
+                        <app-quick-dose-button [number]="0"></app-quick-dose-button>
                     </div>
                     <div
                         class="col d-flex d-xxl-flex flex-column justify-content-md-center align-items-md-center justify-content-xxl-center align-items-xxl-center px-3">
-                        <app-quick-dose-button></app-quick-dose-button>
+                        <app-quick-dose-button [number]="1"></app-quick-dose-button>
                     </div>
                     <div
                         class="col d-flex d-xxl-flex flex-column justify-content-md-center align-items-md-center justify-content-xxl-center align-items-xxl-center px-3">
-                        <app-quick-dose-button></app-quick-dose-button>
+                        <app-quick-dose-button [number]="2"></app-quick-dose-button>
                     </div>
                 </div>
             </div>
