--- a/src/app/quick-dose-button/quick-dose-button.component.html
+++ b/src/app/quick-dose-button/quick-dose-button.component.html
@@ -1,4 +1,5 @@
-<button class="btn btn-primary btn-lg text-center d-block font-weight-bold mb-3" type="button">
+<button mdbRipple (click)="onClickButton()" class="btn btn-primary btn-lg text-center d-block font-weight-bold mb-3"
+    type="button">
     Jetzt Chloren
 </button>
-<app-dosage-input></app-dosage-input>
+<app-dosage-input (doseChangeEvent) ="changeDose($event)"></app-dosage-input>
