--- a/src/app/schedule-display/schedule-display.component.html
+++ b/src/app/schedule-display/schedule-display.component.html
@@ -1,219 +1,22 @@
-<div class="hour-divider">
-    <h5 class="hour-number">0</h5>
-</div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider">
-    <h5 class="hour-number">2</h5>
-</div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider">
-    <h5 class="hour-number">4</h5>
-</div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider">
-    <h5 class="hour-number">6</h5>
-</div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider">
-    <h5 class="hour-number">8</h5>
-</div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider">
-    <h5 class="hour-number">10</h5>
-</div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider">
-    <h5 class="hour-number">12</h5>
-</div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider">
-    <h5 class="hour-number">14</h5>
-</div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider">
-    <h5 class="hour-number">16</h5>
-</div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider">
-    <h5 class="hour-number">18</h5>
-</div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider">
-    <h5 class="hour-number">20</h5>
-</div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider">
-    <h5 class="hour-number">22</h5>
-</div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="half-hour-divider"></div>
-<div class="quarter"></div>
-<div class="quarter-hour-divider"></div>
-<div class="quarter"></div>
-<div class="hour-divider">
-    <h5 class="hour-number">24</h5>
+<!-- Canvas positioned absolute to be overlayed by container -->
+<canvas #scheduleCanvas [style.width]="width+'px'" style="position: absolute; z-index: 0;"></canvas>
+<div #overlay class="host" [style.width]="width+'px'" style="position: absolute; z-index: 1;">
+    <div class="host" [style.width]="width+'px'" style="position: relative;">
+        <div class="hour-divider">
+            <h5 class="hour-number">0</h5>
+        </div>
+        <ng-container
+            *ngFor="let hour of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]">
+            <div class="quarter"></div>
+            <div class="quarter-hour-divider"></div>
+            <div class="quarter"></div>
+            <div class="half-hour-divider"></div>
+            <div class="quarter"></div>
+            <div class="quarter-hour-divider"></div>
+            <div class="quarter"></div>
+            <div class="hour-divider">
+                <h5 *ngIf="hour % 2 === 0" class="hour-number">{{hour}}</h5>
+            </div>
+        </ng-container>
+    </div>
 </div>
