--- a/src/app/overview/heater-button/heater-button.component.html
+++ b/src/app/overview/heater-button/heater-button.component.html
@@ -1,4 +1,4 @@
-<button mdbRipple type="button" (click)="onClickButton()" [class.btn-danger]="!heaterOn" [class.btn-success]="heaterOn" class="btn btn-square-xl font-weight-bold" style="background-image: url('/assets/img/radiator.svg');
+<button mdbRipple type="button" (click)="onClickButton()" [class.btn-danger]="!heaterOn" [class.btn-success]="heaterOn" class="btn btn-square-{{size}} font-weight-bold" style="background-image: url('/assets/img/radiator.svg');
                 background-repeat:no-repeat;
                 background-position: center center;
                 background-size: 80%;
