--- a/src/app/quick-dose-button/quick-dose-button.component.html
+++ b/src/app/quick-dose-button/quick-dose-button.component.html
@@ -2,4 +2,4 @@
     type="button">
     Jetzt Chloren
 </button>
-<app-dosage-input (doseChangeEvent) ="changeDose($event)"></app-dosage-input>
+<app-dosage-input [value]="dose_ml.toString()" (doseChangeEvent) ="changeDose($event)"></app-dosage-input>
