--- a/src/app/numpad-popup/numpad-popup.component.html
+++ b/src/app/numpad-popup/numpad-popup.component.html
@@ -1,5 +1,5 @@
 <!-- Modal -->
 <div class="modal-body">
-    <input (input)="onInputChange($event)" class="input" type="text" id="typeNumber" class="form-control" min="1" max="9999" value={{value}}/>
+    <input (input)="onInputChange($event)" class="input" type="text" id="typeNumber" class="form-control" min="1" max="9999" [readonly]="true" value={{value}}/>
     <div class="simple-keyboard"></div>
 </div>
