--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,3 +125,23 @@ mdb-tabs,
 mdb-tabs > ul > li:last-child {
     margin-left: auto;
 }
+
+.btn:hover {
+    box-shadow: none;
+}
+
+.btn-warning:hover {
+    background-color: var(--mdb-warning);
+}
+
+.btn-danger:hover {
+    background-color: var(--mdb-danger);
+}
+
+.btn-success:hover {
+    background-color: var(--mdb-success);
+}
+
+.form-control[readonly] {
+    background-color: transparent !important;
+}
