Don't Ask Me, I Have No Idea Why This Works Either

--- a/src/app/overview/info-text/info-text.component.html
+++ b/src/app/overview/info-text/info-text.component.html
@@ -1,4 +1,4 @@
-<p class="small text-muted mt-3">
+<p class="small text-muted m-1">
     <ng-container *ngIf="!isEmpty(); else elseBlock">
 
         {{scheduled() ? "Stop in " + getStop() : "Automatischer Start in " + getStart() }}
